test/cli/scenarios_to_cli/other/scenario_validate_selinux_context/kyverno-test.yaml
name: validate-selinux-options
policies:
- policy.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: validate-selinux-options
  resources:
  - busybox-selinux
  result: fail
  rule: validate-selinux-options
